@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
 #
 
+2005-03-18 20:07:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57
+
+    Summary:
+      handlers, add comment to remember an issue with transactions
+    Revision:
+      itools--main--0.7--patch-57
+
+
+    modified files:
+     Changelog handlers/Handler.py xml/Schema.py
+
+
 2005-03-18 15:30:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-56
 
     Summary:
